--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -23,9 +23,8 @@
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:text="@string/title_question_title_name4"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
                 android:textSize="40sp"
                 android:textStyle="bold" />
 
@@ -44,7 +43,7 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/fourth_question_textview_name"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/white"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -66,7 +65,7 @@
                     android:layout_margin="20dp"
                     android:src="@drawable/ic_baseline_volume_mute_24"
                     android:gravity="center"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -87,7 +86,7 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/second_question_textview2_name"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold" />
