--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -24,7 +24,7 @@
                 android:gravity="center"
                 android:text="@string/math_version_name"
                 android:textAllCaps="true"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textColorHint="@color/white"
                 android:textSize="40sp"
                 android:textStyle="bold" />
@@ -52,7 +52,7 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/textView_math_version"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:drawableStart="@drawable/ic_baseline_volume_up_24"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
@@ -107,6 +107,7 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:src="@drawable/ic_baseline_mic_24"
                     android:id="@+id/mic_image_btn"/>
 
