--- a/app/src/main/res/layout/fifth_question.xml
+++ b/app/src/main/res/layout/fifth_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -23,8 +23,7 @@
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:text="@string/fifth_question_name"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textColorHint="@color/white"
                 android:textSize="40sp"
                 android:textStyle="bold" />
@@ -58,7 +57,7 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/textView_fifth_question"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:drawableStart="@drawable/ic_baseline_volume_up_24"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
@@ -185,13 +184,13 @@
 
                 <Button
                     android:id="@+id/Button_finish_answer"
+                    android:hint="@string/Button_finish_answer_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:background="@drawable/round_border"
                     android:gravity="center"
-                    android:hint="@string/Button_finish_answer_text"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
                     android:textSize="16sp"
