--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -23,8 +23,7 @@
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:text="Ninth Question"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textColorHint="@color/white"
                 android:textSize="40sp"
                 android:textStyle="bold" />
@@ -44,9 +43,9 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="enter a sentence"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:drawableStart="@drawable/ic_baseline_volume_up_24"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
