--- a/app/src/main/res/layout/seventh_question.xml
+++ b/app/src/main/res/layout/seventh_question.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sand"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -125,7 +126,7 @@
             android:padding="10dp"
             android:textColorHint="@color/white"
             android:textSize="16sp"
-            app:backgroundTint="#50C1B6" />
+            app:backgroundTint="@color/midnighit_blue" />
 
     </LinearLayout>
 
