--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="green">#50C1B6</color>
     <color name="Red">#F44336</color>
     <color name="blue">#0000FF</color>
+    <color name="midnighit_blue">#191970</color>
+    <color name="sand">#F5F4EF</color>
 </resources>
