--- a/app/src/main/res/drawable/round_border.xml
+++ b/app/src/main/res/drawable/round_border.xml
@@ -4,5 +4,5 @@
     <stroke android:color="@color/green"
         android:width="1dp"/>
     <corners android:radius="100dp"/>
-    <solid android:color="@color/green"/>
+    <solid android:color="@color/midnighit_blue"/>
 </shape>
