--- a/app/src/main/res/layout/choose_third_question.xml
+++ b/app/src/main/res/layout/choose_third_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/sand"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -46,7 +46,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/white"
                     android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:textStyle="normal" />
 
             </LinearLayout>
             <LinearLayout
@@ -71,7 +71,7 @@
                     android:padding="10dp"
                     android:textColorHint="@color/white"
                     android:textSize="16sp"
-                    app:backgroundTint="#50C1B6" />
+                    app:backgroundTint="@color/midnighit_blue" />
 
             </LinearLayout>
 
@@ -97,7 +97,7 @@
                     android:padding="10dp"
                     android:textColorHint="@color/white"
                     android:textSize="16sp"
-                    app:backgroundTint="#50C1B6" />
+                    app:backgroundTint="@color/midnighit_blue" />
             </LinearLayout>
 
         </LinearLayout>
