--- a/app/src/main/res/layout/collect_missingdetails.xml
+++ b/app/src/main/res/layout/collect_missingdetails.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/sand"
     android:orientation="vertical">
 
 
@@ -166,7 +166,7 @@
             android:padding="10dp"
             android:textColorHint="@color/white"
             android:textSize="16sp"
-            app:backgroundTint="#50C1B6" />
+            app:backgroundTint="@color/midnighit_blue" />
 
 
 
