--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sand"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
     android:orientation="vertical">
@@ -106,7 +107,7 @@
             android:padding="10dp"
             android:textColorHint="@color/white"
             android:textSize="16sp"
-            app:backgroundTint="#50C1B6"
+            app:backgroundTint="@color/midnighit_blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/viewYellowCircle"
             app:layout_constraintVertical_bias="0.598"
