--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/sand"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -15,7 +15,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_title"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/ninthQuestion"
                 android:layout_width="match_parent"
@@ -27,7 +31,7 @@
                 android:textColorHint="@color/white"
                 android:textSize="40sp"
                 android:textStyle="bold" />
-
+        </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -106,7 +110,7 @@
                     android:padding="10dp"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
-                    app:backgroundTint="#50C1B6" />
+                    app:backgroundTint="@color/midnighit_blue" />
 
 
             </LinearLayout>
@@ -131,7 +135,7 @@
                     android:padding="10dp"
                     android:textColorHint="@color/white"
                     android:textSize="16sp"
-                    app:backgroundTint="#50C1B6" />
+                    app:backgroundTint="@color/midnighit_blue" />
 
 
             </LinearLayout>
