--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/sand">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,7 +67,7 @@
             android:padding="10dp"
             android:textColorHint="@color/white"
             android:textSize="16sp"
-            app:backgroundTint="#50C1B6" />
+            app:backgroundTint="@color/midnighit_blue" />
 
     </LinearLayout>
 
