--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -16,9 +16,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_title"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/ninthQuestion"
