--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -99,11 +99,19 @@
                 android:layout_margin="5dp"
                 android:baselineAligned="false"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/word_spoken_ET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLength="21"
+                    android:maxLines="1"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp" />
 
                 <ImageButton
-                    android:id="@+id/image_of_microphone"
+                    android:id="@+id/fourth_question_mic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="25dp"
@@ -113,6 +121,13 @@
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="Feedback Here"
+                    android:id="@+id/feedback_text"/>
             </LinearLayout>
 
 
@@ -123,6 +138,20 @@
                 android:orientation="vertical"
                 android:paddingStart="100dp"
                 android:paddingEnd="100dp">
+
+                <Button
+                    android:id="@+id/confirm_word_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/round_border"
+                    android:gravity="center"
+                    android:hint="Confirm Word"
+                    android:padding="10dp"
+                    android:textColorHint="@color/white"
+                    android:textSize="16sp"
+                    app:backgroundTint="@color/midnighit_blue" />
 
                 <Button
                     android:id="@+id/next_Btn"
